Fixes spacing in heading bits.

--- a/_sass/base/_typography.scss
+++ b/_sass/base/_typography.scss
@@ -48,7 +48,6 @@ h1, h2, h3, h4
   line-height: $base-heading-line-height;
   margin: 0;
   padding: 0;
-  //padding-top: 0.7em;
   text-rendering: optimizeLegibility;
   // ^^ Fix character spacing for headings
   // by enabling ligatures in text smaller than 20px
@@ -219,7 +218,7 @@ button,
   @extend .button-primary;
   @include font-size(0.75);
   letter-spacing: 1px;
-  padding: 2px 10px !important;
+  padding: 2px 15px !important;
   height: auto !important;
   width: auto !important;
 }
