--- a/_sass/base/blocks/_results.scss
+++ b/_sass/base/blocks/_results.scss
@@ -21,16 +21,6 @@
       padding-left: $base-padding;
     }
   }
-
-  // @include respond-to(medium-up) {
-  //   background: linear-gradient(
-  //     to right,
-  //     $white 0%,
-  //     $white 50%,
-  //     $mid-gray 50%,
-  //     $mid-gray 100%
-  //   );
-  // }
 }
 
 .results_search {
@@ -43,6 +33,8 @@
   padding-left: $base-padding;
 
   .show-loaded {
+    padding-top: $base-padding;
+
     label {
       display: block;
       padding-bottom: 4px;
@@ -61,8 +53,10 @@
       @include span-columns(12);
 
       @include respond-to(medium-up) {
+        @include span-columns(6);
+
         &:first-of-type {
-          @include span-columns(8);
+          @include span-columns(2);
         }
 
         &:last-of-type {
@@ -92,20 +86,20 @@
 
 .results-share {
   @extend .share;
+  margin-top: $base-padding-lite;
 }
 
-.results-share-wrapper {
-  @include span-columns(12);
-  text-align: right;
-
-  @include respond-to(medium-up) {
-    padding-right: $base-padding;
+.results-sort {
+  label {
+    @include font-size(1);
+  }
+  .u-group_inline-right {
+    width: 100%;
   }
 }
 
 .results-filter {
   background-color: $white;
-  //display: none;
 
   .search-form-intro {
     display: none;
@@ -278,4 +272,3 @@
 .pagination_bottom {
   margin-bottom: $base-padding;
 }
-
