--- a/_sass/base/components/_pagination.scss
+++ b/_sass/base/components/_pagination.scss
@@ -1,5 +1,5 @@
 .pagination {
-  margin-top: $base-padding-lite;
+  margin-top: $base-padding;
   text-align: right;
 
   ol {
